[gd_scene load_steps=4 format=3 uid="uid://4vc6qg8nljbp"]

[ext_resource type="Script" path="res://prog_54b.gd" id="1_qr0vw"]
[ext_resource type="Theme" uid="uid://cu6rrjy4bj6v6" path="res://48px.tres" id="2_m3a2l"]
[ext_resource type="Theme" uid="uid://c3r2mxqqbpx77" path="res://30px.tres" id="3_6dktb"]

[node name="prog_54b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qr0vw")

[node name="lblSum" type="Label" parent="."]
layout_mode = 0
offset_left = 541.0
offset_top = 41.0
offset_right = 991.0
offset_bottom = 160.0
theme = ExtResource("2_m3a2l")
text = "Sum :"
vertical_alignment = 1

[node name="lblAve" type="Label" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 259.0
offset_right = 1005.0
offset_bottom = 378.0
theme = ExtResource("2_m3a2l")
text = "Average :"
vertical_alignment = 1

[node name="txt1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 43.0
offset_right = 365.0
offset_bottom = 155.0
theme = ExtResource("3_6dktb")

[node name="txt2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 178.0
offset_right = 367.0
offset_bottom = 290.0
theme = ExtResource("3_6dktb")

[node name="txt3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 315.0
offset_right = 365.0
offset_bottom = 427.0
theme = ExtResource("3_6dktb")

[node name="txt4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 452.0
offset_right = 367.0
offset_bottom = 564.0
theme = ExtResource("3_6dktb")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 419.0
offset_top = 470.0
offset_right = 607.0
offset_bottom = 567.0
theme = ExtResource("3_6dktb")
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 654.0
offset_top = 470.0
offset_right = 842.0
offset_bottom = 567.0
theme = ExtResource("3_6dktb")
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 877.0
offset_top = 468.0
offset_right = 1065.0
offset_bottom = 565.0
theme = ExtResource("3_6dktb")
text = "Quit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
